templates/istio-system/config/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: app
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: gateway-virtual-service
  namespace: app
spec:
  gateways:
    - gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: "/v1"
      route:
        - destination:
            host: gateway.app.svc.cluster.local
            port:
              number: 4000
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: gateway-circuit-breaker
  namespace: app
spec:
  host: gateway.app.svc.cluster.local
  trafficPolicy:
    outlierDetection: {}
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: auth-circuit-breaker
  namespace: app
spec:
  host: auth.app.svc.cluster.local
  trafficPolicy:
    outlierDetection: {}
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: live-circuit-breaker
  namespace: app
spec:
  host: live.app.svc.cluster.local
  trafficPolicy:
    outlierDetection: {}
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: payment-circuit-breaker
  namespace: app
spec:
  host: payment.app.svc.cluster.local
  trafficPolicy:
    outlierDetection: {}
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: scraper-circuit-breaker
  namespace: app
spec:
  host: scraper.app.svc.cluster.local
  trafficPolicy:
    outlierDetection: {}
